added sketch and measuring content

--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -6,7 +6,7 @@
 ]{book}
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2021-09-09}
+\date{2021-10-14}
 
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
@@ -157,7 +157,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -180,7 +180,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -456,7 +456,7 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 Now that we've covered naming conventions, let's pretend that you store everything on your computer in a single folder. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory (aka folder) structures. This helps us save precious time and improve our productivity.
 
@@ -852,7 +852,7 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
@@ -1048,7 +1048,7 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1260,6 +1260,148 @@ When displaying data using a figure, follow these guidelines:
 
 \textbf{Figure 3}. Head circumference versus height for \emph{n} = 150 BIOL202 students. The positive association is highly significant (Pearson \emph{r} = 0.82; \emph{P} \textless{} 0.001).
 
+\hypertarget{sketches-drawings}{%
+\chapter{Sketches \& Drawings}\label{sketches-drawings}}
+
+\emph{Last updated 2021-10-14}
+
+We've heard it before, a picture is worth a thousand words. While a common place phrase, it echoes very true in biological research. Describing in text the morphological features of an organism is no easy task. Trying to form a mental image of an organism described in text still more difficult! As a simple example, imagine trying to draw a representation of \emph{Fritillaria pudica} from the botanical description in the \href{http://www.efloras.org/florataxon.aspx?flora_id=1\&taxon_id=242101628}{Flora of North America}. No easy task. So let's talk about sketches\ldots{}
+
+\hypertarget{the-role-of-sketches}{%
+\section{The Role of Sketches}\label{the-role-of-sketches}}
+
+Detailed notetaking is an essential aspect of the research process. There are countless benefits to taking detailed notes throughout as you work in the lab or on research projects. Some of these benefits include:
+
+\begin{itemize}
+\tightlist
+\item
+  Increased transparency and openness in your research and thought processes.
+\item
+  Enhanced reproducibility of your experiments and lab work.
+\item
+  Your notes may be able to help you explain variability or unexpected results.
+\end{itemize}
+
+While detailed written notes can be extremely helpful, their combination with sketches is powerful. Some things you might sketch include:
+
+\begin{itemize}
+\tightlist
+\item
+  Experiment plan or design.
+\item
+  Any apparatus's used. This is especially handy if you are using a novel method or apparatus.
+\item
+  Organisms or structures viewed under the microscope.
+\item
+  Organisms or structures viewed during a dissection.
+\end{itemize}
+
+Providing a quick simple sketch alongside your written notes provides additional context to help both yourself and your reader understand what you observed or your train of thought.
+
+\hypertarget{sketching-guidelines}{%
+\section{Sketching Guidelines}\label{sketching-guidelines}}
+
+As we've seen elsewhere, convention and standards help us communicate in unambiguous terms - they allow others in our field to easily interpret what we're trying to say, and they allow us to process our information in computational environments in known and reproducible ways.
+
+The same goes for how we construct sketches in biological research. These sketches are generally simple in their articulation and are embedded within your notebook.
+
+\hypertarget{general-guidelines}{%
+\subsection*{General Guidelines}\label{general-guidelines}}
+\addcontentsline{toc}{subsection}{General Guidelines}
+
+\begin{itemize}
+\tightlist
+\item
+  Do \textbf{not} put a title at the top of your drawing. Instead, place a caption at the bottom left. Captions can be several sentences long and should adequately describe what the sketch is.
+\item
+  Use a minimum number of fine lines and use dotted lines to show depth. Do not shade.
+\item
+  Place the drawing so that the labels can be put in a column on one side. When possible, labels should be to the right of the figure.
+\item
+  Label lines should be straight and should not intersect.
+\end{itemize}
+
+\hypertarget{organisms-and-structures}{%
+\subsection*{Organisms and Structures}\label{organisms-and-structures}}
+\addcontentsline{toc}{subsection}{Organisms and Structures}
+
+Some additional guideline to ensure your sketches are clear and readable when drawing organisms or their structures include:
+
+\begin{itemize}
+\tightlist
+\item
+  Orient your drawing so that the anterior or oral aspect of the organism is at the top of the page.
+\item
+  Labelling should be as complete as possible. If any structures have been removed or displaced you should indicate this on your drawing. If the manual or text you are using mentions certain structures that you cannot locate, make a note of this on your drawing. For example, you may say "nuclei not seen" in your caption.
+\item
+  Genus and species names should be
+
+  \begin{itemize}
+  \item
+    Underlined
+
+    or \emph{Italicized}
+  \item
+    The genus should be Capitalized
+  \item
+    The specific epithet should be all lower case
+  \end{itemize}
+\end{itemize}
+
+\hypertarget{microscopes}{%
+\subsection*{Microscopes}\label{microscopes}}
+\addcontentsline{toc}{subsection}{Microscopes}
+
+When drawing organisms or structures viewed under the microscope:
+
+\begin{itemize}
+\tightlist
+\item
+  Do not draw a circle around your drawing.
+\item
+  Put the scale (or magnification) of your drawing at the bottom right of your drawing. Instructions for determining scale/magnification \href{a-magnification-of-a-drawing.html}{can be found here}.
+\end{itemize}
+
+\hypertarget{good-example-sketches}{%
+\section{Good Example Sketches}\label{good-example-sketches}}
+
+\hypertarget{example-1}{%
+\subsection*{Example 1}\label{example-1}}
+\addcontentsline{toc}{subsection}{Example 1}
+
+This sketch is properly labeled and label lines do not intersect. It contains a descriptive caption below the sketch with the species identified with proper formatting and capitalization and scale noted.
+
+\begin{figure}
+\centering
+\includegraphics{images/JSSG_good-journal-style-fig-1.png}
+\caption{\emph{Caption} Whole (wet) mount of \emph{Vorticella campanula} viewed at 400x total magnification using a brightfield compound microscope. Macronucleus not seen.Image produced by Clerissa Copeland licensed under \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0}}
+\end{figure}
+
+\hypertarget{example-2}{%
+\subsection*{Example 2}\label{example-2}}
+\addcontentsline{toc}{subsection}{Example 2}
+
+This figure is properly labeled and label lines do not intersect. It contains a descriptive caption below the sketch for easy interpretation, and depth is indicated with a dashed line.
+
+\begin{figure}
+\centering
+\includegraphics{images/JSSG_good-journal-style-fig-2.png}
+\caption{\emph{Caption} Column chromatography apparatus set-up used to purify the experiment sample. Silica gel represents the stationary phase whereas the eluent represents the mobile phase. As the components of the sample separated, the stopcock was closed and the collection flask swapped such that only the compound of interest was collected.Image prodced by Clerissa Copeland licensed under \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0}}
+\end{figure}
+
+\hypertarget{poor-example-sketch}{%
+\section{Poor Example Sketch}\label{poor-example-sketch}}
+
+This figure is not directed to have the anterior region at the top, the labelling, while potentially accurate, is not all directionally to the right of the drawing itself. It employs shading and it's wrapped in a circle. Did we miss anything? Oh, the caption is above, not below the sketch and the genus and specific epithet are not properly formatted.
+
+\emph{Caption} Vorticella Campanula viewed using a microscope.
+
+\begin{figure}
+\centering
+\includegraphics{images/JSSG_poor-journal-style-fig-1.png}
+\caption{Image prodced by Clerissa Copeland licensed under \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0}}
+\end{figure}
+
 \hypertarget{part-writing-and-citing}{%
 \part*{Writing and Citing}\label{part-writing-and-citing}}
 \addcontentsline{toc}{part}{Writing and Citing}
@@ -1267,7 +1409,7 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
@@ -1635,7 +1777,7 @@ We'll keep it simple for the moment; this is all you really need for your \_READ
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
@@ -1735,7 +1877,7 @@ Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahma
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -1744,7 +1886,7 @@ Learn more about academic integrity from the \href{https://learningcommons.ubc.c
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -1753,7 +1895,7 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2021-09-09}
+\emph{Last updated 2021-10-14}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
@@ -1928,5 +2070,259 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 \textbf{Version control:} Saving changes to files while retaining the changes on all previous versions of the file. This practice contributes to transparency and openness in science.
 
 \textbf{Wide format data:} A method for organizing data where each row represents an individual subject and each column represents an observation for that subject.
+
+\hypertarget{part-appendix}{%
+\part*{Appendix}\label{part-appendix}}
+\addcontentsline{toc}{part}{Appendix}
+
+\hypertarget{a-magnification-of-a-drawing}{%
+\chapter{A: Magnification of A Drawing}\label{a-magnification-of-a-drawing}}
+
+To determine the scale of a sketch or drawing, we must know the size of the object we're drawing and the size of the image we're representing this object with. Mathematically, this is expressed as
+
+\[m = \frac{d}{o}\]
+
+where
+
+\begin{itemize}
+\tightlist
+\item
+  \(m\) = magnification (or scale) of drawing
+\item
+  \(d\) = size of drawing
+\item
+  \(o\) = size of object
+\end{itemize}
+
+\hypertarget{object-size}{%
+\section{Object Size}\label{object-size}}
+
+Two different methods are described here to calculate an object's size under the microscope. The first uses estimation whereas the second, more precise measure, involves calibration of an ocular micrometer. It is very likely that you frequently won't have access to an ocular micrometer, in which case the estimation method should suffice.
+
+\hypertarget{method-1-estimation}{%
+\section{Method 1: Estimation}\label{method-1-estimation}}
+
+\hypertarget{field-of-view-diameter}{%
+\subsection*{Field of View Diameter}\label{field-of-view-diameter}}
+\addcontentsline{toc}{subsection}{Field of View Diameter}
+
+First, determine the field of view diameter of your microscope for each objective setting.
+
+\textbf{Note}
+
+These values might be provided to you in your lab manual. If so, proceed to the next section, \protect\hyperlink{estimating-object-size}{estimating object size}.
+
+To calculate field of view diameter, we first need to know the field number (FN). When you look at your microscope eyepiece, the FN is displayed after the ocular lens magnification. For example, you might see 10x/16. In this case, 10x is the ocular lens magnification and 16 mm is the FN.
+
+To calculate the field of view diameter use the following formula:
+
+\[d = \frac{f}{o}\]
+
+where
+
+\begin{itemize}
+\tightlist
+\item
+  \(d\) = field of view diameter
+\item
+  \(f\) = field number
+\item
+  \(o\) = objective magnification
+\end{itemize}
+
+Assuming the FN on our microscope is 16 mm, let's calculate the field of view diameter for the 4x objective.
+
+\[d = \frac{16 mm}{4} = 4 mm\]
+
+Repeat this process for the remainder of the objectives on your microscope. Your final result should look something like this:
+
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.24}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.27}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.23}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.26}}@{}}
+\toprule
+\begin{minipage}[b]{\linewidth}\raggedright
+Ocular-magnification
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Objective-magnification
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Total-magnification
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Field-of-view-diameter
+\end{minipage} \\
+\midrule
+\endhead
+10x & 4x & 40x & 4 mm \\
+10x & 10x & 100x & 1.6 mm \\
+10x & 40x & 400x & 0.4 mm \\
+10x & 100x & 1000x & 0.16 mm \\
+\bottomrule
+\end{longtable}
+
+\hypertarget{estimating-object-size}{%
+\subsection*{Estimating Object Size}\label{estimating-object-size}}
+\addcontentsline{toc}{subsection}{Estimating Object Size}
+
+Next, estimate the size of the object you are looking at.
+
+Since you know the diameter of the field of view for each lens, you can easily estimate the length or size of objects you are looking at by roughly comparing the object's size to the diameter of the circle. The formula for doing this is:
+
+\[o = fr \times d\]
+where
+
+\begin{itemize}
+\tightlist
+\item
+  \(o\) = object size
+\item
+  \(fr\) = fraction of the field of view taken up by the object
+\item
+  \(d\) = field of view diameter
+\end{itemize}
+
+For example, suppose you are looking at a protozoan that extends 3/4 of the way across the field under 400x total magnification. Using the table above for the microscope in this example, we can see that at 400x total magnification, the objective magnification is 40x and the diameter of the field of view is 0.4 mm. Plugging these numbers into the formula above, we can estimate the length of the object at 0.3 mm.
+
+\[o = \frac{3}{4} \times 0.4mm = 0.3mm\]
+
+\begin{figure}
+\centering
+\includegraphics{images/DM_estimating-object-size.png}
+\caption{\emph{Caption} Estimating object size.Image produced by Clerissa Copeland licensed under \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0}}
+\end{figure}
+
+\hypertarget{method-2-ocular-micrometer}{%
+\section{Method 2: Ocular Micrometer}\label{method-2-ocular-micrometer}}
+
+The ocular micrometer is inserted into one of the eyepieces of the microscope and looks like a ruler.
+
+\begin{figure}
+\centering
+\includegraphics{images/DM_ocular-micrometer.png}
+\caption{\emph{Caption} The Ocular Micrometer.Image produced by Mathew Vis-Dunbar licensed under \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0}}
+\end{figure}
+
+The distance between the markings on the micrometer are used to measure objects in the field of view and represent different sizes of increments at different magnifications because the diameter of the field of view decreases as the magnification increases.
+
+In order to determine the size represented by the increments at different magnifications, the ocular micrometer must be calibrated against a stage micrometer (a special slide containing a scale marked off in 10\(\mu\)m increments).
+
+\hypertarget{calibrating-the-ocular-micrometer}{%
+\subsection*{Calibrating the Ocular Micrometer}\label{calibrating-the-ocular-micrometer}}
+\addcontentsline{toc}{subsection}{Calibrating the Ocular Micrometer}
+
+To calibrate the ocular micrometer, follow these steps:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Look through the microscope eyepieces and note the ocular micrometer.
+\item
+  Obtain a stage micrometer and bring the scale into focus using the 40x objective (remember to focus it first using the 4x and 10x objectives).
+\item
+  Rotate the ocular lens tube until the markings of the ocular micrometer are lined up parallel to those of the stage micrometer and superimposed on them.
+\item
+  Use the mechanical stage adjustment knob to move the stage micrometer so that the lines of both micrometers coincide at the left edge of the field.
+\end{enumerate}
+
+\begin{figure}
+\centering
+\includegraphics{images/DM_ocular-micrometer-calibration.png}
+\caption{\emph{Caption} Calibration of the ocular micrometer. Note that this diagram is only an example and will not necessarily reflect the alignment you will see under your own microscope.Image produced by Mathew Vis-Dunbar licensed under {[}CC BY-NC-SA 4.0{]}}
+\end{figure}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{4}
+\tightlist
+\item
+  Starting with the lowest magnification objective, carefully observe and count the number of increments on the ocular micrometer that correspond to a single 10\(\mu\)m division (the smallest division on the stage micrometer) of the stage micrometer. Repeat this for each objective lens.
+\item
+  Calculate the size of one ocular micrometer unit using the following formula:
+\end{enumerate}
+
+\[o=\frac{10\mu m}{u}\]
+
+where
+
+\begin{itemize}
+\tightlist
+\item
+  \(o\) = size of 1 ocular micrometer unit (in \(\mu\)m)
+\item
+  10\(\mu m\) is the width of 1 stage micrometer unit
+\item
+  \(u\) = \# of ocular micrometer units in 1 stage micrometer unit
+\end{itemize}
+
+Example: Using a particular objective lens, you find that there are 5 ocular units in one stage micrometer unit. By using the formula above, you can then determine that each ocular micrometer unit for that objective is equal to 2 \(\mu\)m. See the calculations below:
+
+\[o=\frac{10\mu m}{5 ocular micrometer units}=2\mu m\]
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{6}
+\tightlist
+\item
+  Now you can calculate the size of a specimen by counting the number of ocular micrometer increments spanned by the specimen and multiplying it by the width of the ocular micrometer unit at that specific magnification. If your specimen is longer than it is wide, do this for both the width and the length of your specimen.
+\end{enumerate}
+
+\textbf{Note}
+
+Make sure to measure more than one specimen and report the range of sizes for each dimension to account for the natural variation that occurs in the population. For example, a bacillus-shaped bacterium that ranges between 1 to 5 \(\mu m\) in width and 4 to 10 \(\mu m\) in length would be expressed as 1-5\(\mu m\) x 4-10 \(\mu m\).
+
+\hypertarget{drawing-size}{%
+\section{Drawing Size}\label{drawing-size}}
+
+Next, you must measure your drawing.
+
+Now that you have estimated the size of the object, you must measure your drawing using a ruler. Let's suppose that in the above example that the protozoan drawing is 6 cm (or 60 mm) long.
+
+\begin{figure}
+\centering
+\includegraphics{images/DM_measuring-drawing-size.png}
+\caption{\emph{Caption} Measuring drawing size.Image produced by Clerissa Copeland licensed under \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0}}
+\end{figure}
+
+\hypertarget{calculating-scale}{%
+\section{Calculating Scale}\label{calculating-scale}}
+
+Lastly, you can determine the drawing magnification using the following formula:
+
+\[m = \frac{d}{o}\]
+
+where
+
+\begin{itemize}
+\tightlist
+\item
+  \(m\) = magnification (or scale) of drawing
+\item
+  \(d\) = size of drawing
+\item
+  \(o\) = size of object
+\end{itemize}
+
+Now that you know both the size of the drawing and the size of the object, you can plug that information into the above formula.
+
+In the previous example (Under Estimating object size using field of view diameter), the protozoan drawing is 60 mm and the size of the protozoan was estimated to be 0.3 mm. Plugging these values into the formula, we get a magnification of 200x.
+
+\[m = \frac{60mm}{0.3mm} = 200\]
+
+Alternatively, you can write this as a ratio with drawing size: real life size. In this case the scale would be 200:1.
+
+\textbf{Note}
+
+Place the scale or magnification on the bottom right of your drawing.
+
+Units must match and then they cancel out, leaving the "x" to indicate magnification. You may also use the word "times" instead of "x".
+
+Here is the final image.
+
+\begin{figure}
+\centering
+\includegraphics{images/DM_final-image.png}
+\caption{Whole (wet) mount of \emph{Vorticella campanula} viewed at 400x total magnification using a brightfield compound microscope. Macronucleus not seen.Image produced by Clerissa Copeland licensed under \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0}}
+\end{figure}
 
 \end{document}
