--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,11 @@ These guidelines are modeled on best practices in the life sciences and where ne
 
 **For Instructors** Any concerns or omissions from these procedures and guidelines can be forwarded to Jason Pither (jason.pither@ubc.ca) or Mathew Vis-Dunbar (mathew.vis-dunbar@ubc.ca)
 
-**NOTE** This is a living document. Expect that content will be added over time and adapted as needs and circumstances change.
+<div class = "note">
+**Note**
+
+This is a living document. Expect that content will be added over time and adapted as needs and circumstances change.
+</div>
 
 ## Copyright {-}
 
