--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -6,7 +6,7 @@
 ]{book}
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2021-10-28}
+\date{2021-11-29}
 
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
@@ -100,7 +100,9 @@ These guidelines are modeled on best practices in the life sciences and where ne
 
 \textbf{For Instructors} Any concerns or omissions from these procedures and guidelines can be forwarded to Jason Pither (\href{mailto:jason.pither@ubc.ca}{\nolinkurl{jason.pither@ubc.ca}}) or Mathew Vis-Dunbar (\href{mailto:mathew.vis-dunbar@ubc.ca}{\nolinkurl{mathew.vis-dunbar@ubc.ca}})
 
-\textbf{NOTE} This is a living document. Expect that content will be added over time and adapted as needs and circumstances change.
+\textbf{Note}
+
+This is a living document. Expect that content will be added over time and adapted as needs and circumstances change.
 
 \hypertarget{copyright}{%
 \section*{Copyright}\label{copyright}}
@@ -157,7 +159,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -180,7 +182,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -456,7 +458,7 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 Now that we've covered naming conventions, let's pretend that you store everything on your computer in a single folder. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory (aka folder) structures. This helps us save precious time and improve our productivity.
 
@@ -852,7 +854,7 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
@@ -1048,7 +1050,7 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1263,7 +1265,7 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{sketches-drawings}{%
 \chapter{Sketches \& Drawings}\label{sketches-drawings}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 We've heard it before, a picture is worth a thousand words. While a common place phrase, it echoes very true in biological research. Describing in text the morphological features of an organism is no easy task. Trying to form a mental image of an organism described in text still more difficult! As a simple example, imagine trying to draw a representation of \emph{Fritillaria pudica} from the botanical description in the \href{http://www.efloras.org/florataxon.aspx?flora_id=1\&taxon_id=242101628}{Flora of North America}. No easy task. So let's talk about sketches\ldots{}
 
@@ -1409,7 +1411,7 @@ This figure is not directed to have the anterior region at the top, the labellin
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
@@ -1449,17 +1451,33 @@ You'll need a text editor or a dedicated Markdown editor! What's the difference?
 
 A text editor will not format your markdown, it'll just display the plain text. When you open the \_README.md files noted throughout this book (either in \textbf{TextEdit} on a Mac or \textbf{Notepad} on Windows), you see the raw, plain text output.
 
-A dedicated Markdown editor will format your Markdown as you type, so you get an idea as to how it will render if you were to save it as a pdf, html etc. There are a lot of Markdown editors available, many of them free and open source.
+\textbf{Note}
 
-Already have a favourite text editor or Markdown editor? Great. If not, we'd like to suggest the following, which provide an easy-to-use interface and work across two panes, one where you see your plain text output and one where you see how it will be rendered when formatted. Both are free and open source.
+TextEdit on your mac is not actually a plain text editor; while TextEdit can read and open a Markdown file, it cannot create a Markdown file. MacOS does not ship with a plain text editor like Notepad on Windows. So if you're on a Mac, you'll need to download a text editor.
 
-\textbf{Mac OS}
+A dedicated Markdown editor will format your Markdown as you type, so you get an idea as to how it will render if you were to save it as a pdf, html etc. There are a lot of Markdown editors available, many of them free and open source, and many for very specific use cases. When you have some free time, you may choose to check out the following comprehensive list \url{https://www.markdownguide.org/tools/}.
 
-MacDown available at \url{https://macdown.uranusjr.com/}
+In between a plain text editor and a dedicated Markdown editor are those text editors with add-ons to help you navigate your markup. These options provide a lot of flexibility and finding a text editor of this ilk that you like will be of benefit going forward in your degree. An excellent free and open source, cross platform option is \href{https://atom.io/}{Atom}, which has built in support for Markdown rendering.
 
-\textbf{Windows}
+\hypertarget{atom}{%
+\subsection*{Atom}\label{atom}}
+\addcontentsline{toc}{subsection}{Atom}
 
-Markdown Edit available at \url{https://mike-ward.net/Markdown-Edit/}
+Download Atom at \url{https://atom.io/}
+
+Once downloaded, launch it and you'll be presented with an \texttt{untitled} blank document. Save it somewhere with a file name of your choosing and a file type of \texttt{.md} - so something like, \texttt{my-first-note.md}. You can then toggle Markdown preview on and off with your packages menu
+
+\begin{figure}
+\centering
+\includegraphics{images/MD_preview-toggle.png}
+\caption{Toggling Markdown preview in Atom.}
+\end{figure}
+
+\textbf{Note}
+
+One other thing that you'll want to do is to set up how Atom handles tabs. A tab may be either \texttt{hard} or \texttt{soft}. A \texttt{hard} tab is encoded with a tab character, which can throw off the interoperability that we're trying to achieve with using a plain text editor. A \texttt{soft} tab is simply encoded as a series of spaces; this plays much better in general as text is moved between programs and operating systems.
+
+So, head into \texttt{Settings\ \textgreater{}\ Editor\ \textgreater{}\ Tab\ Type} and ensure that it is set to \texttt{soft}. At the same time, you should probably turn on \texttt{Soft\ Wrap}.
 
 \hypertarget{prose}{%
 \section{Prose}\label{prose}}
@@ -1777,7 +1795,7 @@ We'll keep it simple for the moment; this is all you really need for your \_READ
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
@@ -1877,7 +1895,7 @@ Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahma
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -1886,7 +1904,7 @@ Learn more about academic integrity from the \href{https://students.ok.ubc.ca/ac
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -1895,7 +1913,7 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2021-10-28}
+\emph{Last updated 2021-11-29}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
@@ -2075,8 +2093,9 @@ Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/
 \part*{Appendix}\label{part-appendix}}
 \addcontentsline{toc}{part}{Appendix}
 
-\hypertarget{a-magnification-of-a-drawing}{%
-\chapter{A: Magnification of A Drawing}\label{a-magnification-of-a-drawing}}
+\hypertarget{a1-magnification-of-a-drawing}{%
+\chapter*{A1: Magnification of A Drawing}\label{a1-magnification-of-a-drawing}}
+\addcontentsline{toc}{chapter}{A1: Magnification of A Drawing}
 
 To determine the scale of a sketch or drawing, we must know the size of the object we're drawing and the size of the image we're representing this object with. Mathematically, this is expressed as
 
